# MAKER_BRB

./: pyproject.toml
data/: attribute.json  demodata.json  demodata.txt  features.csv  label.json  tmp.json
maker_brb/: model.ipynb  model_test.py
maker_brb/brb/: brb_dataset.py  brb_model.py  data_preprocess.py  data_transformer.py  rule_belief_layer.py  rule_weight_layer.py  train.py
maker_brb/maker/: MAKER.py  MAKER_simple.py  data_process copy.ipynb  data_process.ipynb  data_transformation.py  tmp.py
maker_brb/maker/types/: feature.py  instance.py
maker_brb/test/: my_layer.py  my_layer2.py  my_net.py  my_net2.py  test.py
maker_brb/types/: alpha_v_q.py  attrbute.py  encoded_parameter.py  w_k_rules.py
maker_brb/utils/: mapping_func.py  set_seed.py
tests/: test_data_process.py  test_dataset.py  test_maker_brb.py  test_rule_belief_layer.py  test_rule_weight_layer.py  test_train_brb.py
