[tool.poetry]
name = "MAKER_BRB"
version = "0.1.0"
description = ""
authors = ["ljw23 <596951616@qq.com>"]

[tool.poetry.dependencies]
python = "^3.5"
yapf = "^0.31.0"

[[tool.flit.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
